# local-business-suite

./: .desc.json  .dockerignore  .env.example  .gitignore  .gitmodules  AD_LDAPS_CERTS.md  AD_SETUP.md  AGENTS.md  AGENT_RUNTIME_SETUP.md  AI_FIRST_CODE_FIRST_REVIEW.md  ARCHITECTURE.md  BACKLOG.md  BUGFIX_400_BAD_REQUEST.md  CHANGE_PATTERNS.md  CLAUDE.md  Caddyfile  DEPLOYMENT.md  DEPLOY_PRIVATE.md  Dockerfile  ENV_MIGRATION.md  HISTORY_CLEANED.md  HTTPS_SETUP.md  IIS_PATH_INFO_FIX.md  IIS_SSO.md  Local Business Suite.md  MVP_Architecture.md  MVP_Implementation_Plan.md  Makefile  NEXT_STEPS.md  POLICY_MODEL.md  PROJECT_HANDOFF.md  PROJECT_MAP.md  PROJECT_STRUCTURE.yaml  PROJECT_WORKFLOW_CONFIG.json  README.md  SECURE_SECRETS.md  SUBMODULE_COMPLETED.md  codex_test_report.md  deploy.sh  docker-compose.librechat.local.yml  (+16 more)
.claude/: settings.local.json
.gemini/: settings.json
.playwright-mcp/: page-2026-04-23T08-32-51-393Z.yml  page-2026-04-23T08-33-05-773Z.yml  page-2026-04-23T08-33-08-565Z.yml  page-2026-04-23T08-36-12-193Z.yml
_backup_pre_update/: make_admin.py
adr/: ADR-0002-config-driven-policy-and-workflow.md
ai/: .desc.json
analytics_store/: .desc.json  datasets.json  datasets.schema.json
apps/: .desc.json
archive/: .desc.json  AGENT_RUNTIME_RUNNING.md  AI_EXPANSION_BLOCK_PLAN.json  (+8 more)
clients/desktop-notifier/src-tauri/: .desc.json  Cargo.toml  tauri.conf.json
clients/desktop-notifier/src-tauri/capabilities/: .desc.json  default.json
clients/desktop-notifier/src-tauri/icons/: .desc.json
clients/desktop-notifier/src-tauri/src/: .desc.json  lib.rs
(+1417 files in other folders)
