[package]
name = "local-business-desktop-notifier"
version = "0.1.0"
description = "Tauri tray client for local-business-suite notifications"
authors = ["local-business-suite"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "local-business-desktop-notifier"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"
